--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html>
 
 
 <head>
-    <title>test bot</title>
+    <title>My Bot</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}">
 </head>
 
-<body>
+
+
+
+<body style="background-color:rgb(69, 93, 112);">
+
+
     <center>
-        <h1>Bot trade Process</h1>
-        <pre> 
-        {{ content }} 
-        </pre>
+        <div class="container" style="margin-top: 50px;">
+            <div class="card" style="height: 100%">
+                <div class="card-body">
+                    <h4 class="card-title">Bot trade history</h4>
+                    <p class="card-text">{{ content|safe }}</p>
+                    <!-- <a href="# " class="btn btn-primary ">Dowload to file.txt</a> -->
+                </div>
+            </div>
     </center>
-
-
-
-
 </body>
-
-</html>
