--- a/templates/cm_bot.html
+++ b/templates/cm_bot.html
@@ -2,10 +2,11 @@
 
 
 <head>
-    <title>My Bot</title>
+    <title>status bot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}">
 </head>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -49,17 +50,17 @@
     </div>
 </nav>
 
-
-<body style="background-color:rgb(69, 93, 112);">
+<body>
 
 
     <center>
-        <div class="container" style="margin-top: 50px;">
-            <div class="card" style="height: 100%">
-                <div class="card-body">
-                    <h4 class="card-title">Bot trade history</h4>
-                    <p class="card-text">{{ content|safe }}</p>
-                    <!-- <a href="# " class="btn btn-primary ">Dowload to file.txt</a> -->
+        <div hx-get="/cm_bot" hx-trigger="every 2s">
+            <div class="container" style="margin-top: 50px;">
+                <div class="card bg-dark textgreen" style="height: 100%; width: 50%;">
+                    <div class="card-body ">
+                        <h4 class="card-title ">Bot processing</h4>
+                        <p class="card-text ">{{ content|safe }}</p>
+                    </div>
                 </div>
             </div>
     </center>
