--- a/templates/buy.html
+++ b/templates/buy.html
@@ -31,7 +31,7 @@
 
 
     <center>
-        <div class="container" style="margin-top: 50px;">
+        <div class="container card-tune" style="margin-top: 50px;">
             <div class="card" style="height: 100%">
                 <div class="card-body">
                     <h4 class="card-title">Bought History</h4>
