--- a/templates/cm_bot.html
+++ b/templates/cm_bot.html
@@ -46,6 +46,7 @@
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Social media -->
+            <h3>☺ Follow/Contact Me ☺</h3>
             <section class="mb-4">
                 <!-- Facebook -->
                 <a class="btn btn-light btn-floating m-1" target="_blank" href="https://www.facebook.com/tanad.singlow" role="button"><i><img src="/static/image/facebook.png" style="max-height: 25px; max-width: 25px;"></i
