--- a/templates/buy.html
+++ b/templates/buy.html
@@ -17,7 +17,7 @@
 </style>
 
 <!-- Nav bar -->
-<div class="topnav" id="myTopnav">
+<div class="topnav sticky-top" id="myTopnav">
     <a href="{{ url_for('index') }}" class="active">My bot</a>
     <a href="{{ url_for('buy') }}">Bought History</a>
     <a href="{{ url_for('sell') }}">Sold History</a>
@@ -39,6 +39,44 @@
                 </div>
             </div>
     </center>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!-- Section: Social media -->
+            <h3>☺ Follow/Contact Me ☺</h3>
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-light btn-floating m-1" target="_blank" href="https://www.facebook.com/tanad.singlow" role="button"><i><img src="/static/image/facebook.png" style="max-height: 25px; max-width: 25px;"></i
+        ></a>
+
+                <!-- Github -->
+                <a class="btn btn-light btn-floating m-1" target="_blank" href="https://github.com/administer03" role="button"><i><img src="/static/image/git.png" style="max-height: 25px; max-width: 25px;"></i
+        ></a>
+            </section>
+            <!-- Section: Social media -->
+
+
+
+            <!-- Section: Text -->
+            <section class="mb-4">
+                <p>
+                    01110011 01110101 01110000 01110000 01101111 01110010 01110100 00100000 01101101 01100101 00100000 00110000 00111001 00110111 00111001 00110011 00111001 00110110 00111000 00110000 00110011 </p>
+            </section>
+            <!-- Section: Text -->
+
+
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2021 Copyright
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
 
     <!-- for navbar mobile screen -->
     <script>
