--- a/templates/sell.html
+++ b/templates/sell.html
@@ -34,6 +34,8 @@
             </div>
     </center>
 
+    <div class="container" style="height: 100px;"></div>
+
     <!-- Footer -->
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
