update button to top and separate file js

--- a/templates/buy.html
+++ b/templates/buy.html
@@ -28,7 +28,8 @@
 
 
 <body style="background-color:rgb(69, 93, 112);">
-
+    <!-- back to top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
 
     <center>
         <div class="container card-tune" style="margin-top: 50px;">
@@ -80,16 +81,6 @@
     </footer>
     <!-- Footer -->
 
-    <!-- for navbar mobile screen -->
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
+    <script src="../static/script.js"></script>
 
 </body>
