--- a/templates/sell.html
+++ b/templates/sell.html
@@ -21,8 +21,8 @@
 
 
 <body style="background-color:rgb(69, 93, 112);">
-
-
+    <!-- back to top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <center>
         <div class="container" style="margin-top: 50px;">
             <div class="card" style="height: 100%">
@@ -74,17 +74,5 @@
     </footer>
     <!-- Footer -->
 
-    <!-- for navbar mobile screen -->
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
-
-
+    <script src="../static/script.js"></script>
 </body>
