--- a/static/styles.css
+++ b/static/styles.css
@@ -177,3 +177,23 @@ footer {
     color: rgb(60, 194, 67);
     padding: 1%;
 }
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: rgb(233, 221, 61);
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    padding: 12px;
+    border-radius: 50px;
+}
+
+#myBtn:hover {
+    background-color: #555;
+}
