--- a/templates/cm_bot.html
+++ b/templates/cm_bot.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-
 <head>
     <title>status bot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -20,40 +19,24 @@
 </div>
 
 <body>
-
-
-    <!-- <div hx-get="/cm_bot" hx-trigger="every 2s">
-            <div class="container" style="margin-top: 50px;">
-                <div class="card bg-dark textgreen" style="height: 100%; width: 50%;">
-                    <div class="card-body ">
-                        <h4 class="card-title ">Bot processing</h4>
-                        <p class="card-text ">{{ content|safe }}</p>
-                    </div>
-                </div>
-            </div> -->
+    <!-- back to top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <div style="margin: 2%; text-align: center;">
         <h1>Realtime Robotics</h1><br>
         <center>
-            <div class="flex-home">
-                <p></p>Coin Symbol: {{ content_CS|safe }} <br>Date-Time: {{ content_Dt|safe }} || Action: {{ content_act|safe }}
-                <br>Last Price: {{ content_LP|safe }} || Change(%): {{ content_chg|safe }}
-                <br>Cash Balance(USD): {{ content_CB|safe }} || Total Profit/Loss: {{ content_TPL|safe }}
-                </p>
-            </div>
+            <table>
+                <div class="flex-home">
+                    <p></p>Coin Symbol: {{ content_CS|safe }} <br>Date-Time: {{ content_Dt|safe }} || Action: {{ content_act|safe }}
+                    <br>Last Price: {{ content_LP|safe }} || Change(%): {{ content_chg|safe }}
+                    <br>Cash Balance(USD): {{ content_CB|safe }} || Total Profit/Loss: {{ content_TPL|safe }}
+                    </p>
+                </div>
+            </table>
+
         </center>
 
         <img src="/static/image/bot.png">
     </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -67,23 +50,17 @@
                 <!-- Facebook -->
                 <a class="btn btn-light btn-floating m-1" target="_blank" href="https://www.facebook.com/tanad.singlow" role="button"><i><img src="/static/image/facebook.png" style="max-height: 25px; max-width: 25px;"></i
         ></a>
-
                 <!-- Github -->
                 <a class="btn btn-light btn-floating m-1" target="_blank" href="https://github.com/administer03" role="button"><i><img src="/static/image/git.png" style="max-height: 25px; max-width: 25px;"></i
         ></a>
             </section>
             <!-- Section: Social media -->
-
-
-
             <!-- Section: Text -->
             <section class="mb-4">
                 <p>
                     01110011 01110101 01110000 01110000 01101111 01110010 01110100 00100000 01101101 01100101 00100000 00110000 00111001 00110111 00111001 00110011 00111001 00110110 00111000 00110000 00110011 </p>
             </section>
             <!-- Section: Text -->
-
-
         </div>
         <!-- Grid container -->
 
@@ -95,16 +72,7 @@
     </footer>
     <!-- Footer -->
 
-    <!-- for navbar mobile screen -->
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
 
+    <!-- for navbar mobile screen -->
+    <script src="../static/script.js"></script>
 </body>
