--- a/templates/buy.html
+++ b/templates/buy.html
@@ -17,7 +17,7 @@
 </style>
 
 <!-- Nav bar -->
-<div class="topnav sticky-top" id="myTopnav">
+<div class="topnav" id="myTopnav">
     <a href="{{ url_for('index') }}" class="active">My bot</a>
     <a href="{{ url_for('buy') }}">Bought History</a>
     <a href="{{ url_for('sell') }}">Sold History</a>
@@ -32,7 +32,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
 
     <center>
-        <div class="container card-tune" style="margin-top: 50px;">
+        <div class="container card-tune" style="margin-top: 5%;">
             <div class="card" style="height: 100%">
                 <div class="card-body">
                     <h4 class="card-title">Bought History</h4>
