--- a/templates/cm_bot.html
+++ b/templates/cm_bot.html
@@ -21,8 +21,9 @@
 <body>
     <!-- back to top button -->
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
-    <div style="margin: 2%; text-align: center;">
-        <h1>Realtime Robotics</h1><br>
+
+    <div style="margin: 4%; text-align: center;">
+        <h1 class="home-margin">Realtime Robotics</h1><br>
         <center>
             <table>
                 <div class="flex-home">
