--- a/templates/sell.html
+++ b/templates/sell.html
@@ -10,7 +10,7 @@
 </head>
 
 <!-- Nav bar -->
-<div class="topnav sticky-top" id="myTopnav">
+<div class="topnav" id="myTopnav">
     <a href="{{ url_for('index') }}" class="active">My bot</a>
     <a href="{{ url_for('buy') }}">Bought History</a>
     <a href="{{ url_for('sell') }}">Sold History</a>
@@ -24,7 +24,7 @@
     <!-- back to top button -->
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <center>
-        <div class="container" style="margin-top: 50px;">
+        <div class="container" style="margin-top: 5%;">
             <div class="card" style="height: 100%">
                 <div class="card-body">
                     <h4 class="card-title">Sold History</h4>
