--- a/templates/cm_bot.html
+++ b/templates/cm_bot.html
@@ -4,8 +4,8 @@
     <title>status bot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 </head>
 
 <!-- Nav bar -->
@@ -20,7 +20,7 @@
 
 <body>
     <!-- back to top button -->
-    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">▲</button>
 
     <div style="margin: 6%; text-align: center;">
         <h1 class="home-margin">Realtime Robotics</h1><br>
@@ -38,8 +38,6 @@
 
         <img src="/static/image/bot.png">
     </div>
-
-
 
     <!-- Footer -->
     <footer class="bg-dark text-center text-white">
@@ -72,7 +70,6 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
 
     <!-- for navbar mobile screen -->
     <script src="../static/script.js"></script>
