--- a/templates/sell.html
+++ b/templates/sell.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 
-
 <head>
     <title>My Bot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 </head>
 
 <!-- Nav bar -->
@@ -19,10 +18,9 @@
     </a>
 </div>
 
-
 <body style="background-color:rgb(69, 93, 112);">
     <!-- back to top button -->
-    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">▲</button>
     <center>
         <div class="container" style="margin-top: 5%;">
             <div class="card" style="height: 100%">
@@ -52,20 +50,14 @@
         ></a>
             </section>
             <!-- Section: Social media -->
-
-
-
             <!-- Section: Text -->
             <section class="mb-4">
                 <p>
                     01110011 01110101 01110000 01110000 01101111 01110010 01110100 00100000 01101101 01100101 00100000 00110000 00111001 00110111 00111001 00110011 00111001 00110110 00111000 00110000 00110011 </p>
             </section>
             <!-- Section: Text -->
-
-
         </div>
         <!-- Grid container -->
-
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2021 Copyright
@@ -73,6 +65,6 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
+    <!-- for navbar mobile screen -->
     <script src="../static/script.js"></script>
 </body>
