--- a/templates/cm_bot.html
+++ b/templates/cm_bot.html
@@ -26,7 +26,7 @@
         <h1 class="home-margin">Realtime Robotics</h1><br>
         <center>
             <table>
-                <div class="flex-home">
+                <div id=fhome>
                     <p></p>Coin Symbol: {{ content_CS|safe }} <br>Date-Time: {{ content_Dt|safe }} || Action: {{ content_act|safe }}
                     <br>Last Price: {{ content_LP|safe }} || Change(%): {{ content_chg|safe }}
                     <br>Cash Balance(USD): {{ content_CB|safe }} || Total Profit/Loss: {{ content_TPL|safe }}
